src/styles/board.scss
@import './variables.scss';

.board.friendly {
  .map-title {
    color: $blue-light-color;
  }
}

.board.enemy {
  .map-title {
    color: $orange-light-color;
  }
}

.board {
  width: 100%;
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: auto auto;
  max-width: $board-max-width;
  border-radius: $main-border-radius;
  .map-title-container {
    .map-title {
      text-align: right;
      font-size: $font-size-large-responsive;
      margin-bottom: 0.5rem;
      padding-right: 0.5rem;
    }
  }
  .axis-button-container {
    order: 1;
    grid-column: 1/3;
    margin-bottom: 1rem;
  }
  .letter-container,
  .number-container {
    @include noUserSelect;
    font-size: $font-size-medium-low-responsive;
  }
  .letter-container {
    @include flexRowSpaceAround;
    order: 2;
    grid-column: 2/3;
    margin-bottom: 0.5rem;
  }
  .number-container {
    @include flexColumnSpaceAround;
    order: 3;
    grid-column: 1/2;
    margin-right: 0.5rem;
  }
  .field-container {
    order: 4;
    position: relative;
    z-index: 0;
    grid-column: 2/3;
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(10, 1fr);
    aspect-ratio: 1/1;
    border-collapse: collapse;
    background-repeat: no-repeat;
    overflow: hidden;
    background-image: url('../assets/images/grid.svg'),
      radial-gradient(
        circle,
        rgba(2, 0, 36, 0) 15%,
        rgba(112, 205, 241, 0.10127801120448177) 60%,
        rgba(112, 205, 241, 0.2497373949579832) 85%,
        rgba(112, 205, 241, 0.40379901960784315) 100%
      );
    &::before {
      @include pseudoOverlay;
      display: block;
      top: 50%;
      left: 50%;
      height: $font-size-extra-large-responsive;
      width: $font-size-extra-large-responsive;
      border-radius: 100%;
      transform-origin: top left;
      background: url('../assets/images/cross.svg') center / cover no-repeat;
      transform: rotate(45deg) translate(-50%, -50%);
      -webkit-filter: invert(67%) sepia(88%) saturate(286%) hue-rotate(164deg)
        brightness(96%) contrast(97%);
      filter: invert(67%) sepia(88%) saturate(286%) hue-rotate(164deg)
        brightness(96%) contrast(97%);
    }
    &::after {
      display: block;
      @include pseudoUnderlay;
      box-sizing: border-box;
      inset: unset;
      top: -50%;
      left: -50%;
      margin: 0 auto;
      border-right: solid 0.0625rem #87cfeb50;
      width: 100%;
      height: 100%;
      border-radius: 100% 0 0 0;
      transform-origin: 100% 100%;
      background: linear-gradient(50deg, rgba(34, 34, 34, 0) 56%, #70cdf1);
      -webkit-animation: sweep 3.5s infinite linear;
      animation: sweep 3.5s infinite linear;
      pointer-events: none;
    }
    img {
      -webkit-filter: invert(67%) sepia(88%) saturate(286%) hue-rotate(164deg)
        brightness(96%) contrast(97%);
      filter: invert(67%) sepia(88%) saturate(286%) hue-rotate(164deg)
        brightness(96%) contrast(97%);
    }

    .field {
      @include flexRowCenter;
      aspect-ratio: 1/1;
      position: relative;
      // border: 1px solid $white-low;
      &.no-drop,
      &.no-drop * {
        pointer-events: none;
      }
      &.hovering {
        background-color: $blue-light-color-transparent;
        &.red {
          background-color: $red-light-color-transparent;
        }
      }
      &:hover {
        background-color: rgba(255, 255, 255, 0.25);
      }
    }
    .ship-image-container {
      position: relative;
      z-index: 1;
      pointer-events: none;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
      transform-origin: center;
      &.bleep {
        animation: bleep 3.5s infinite linear;
        -webkit-animation: bleep 3.5s infinite linear;
      }
      img {
        position: relative;
        padding: 0;
        -webkit-user-select: none;
        -moz-user-select: none;
        -ms-user-select: none;
        user-select: none;
        pointer-events: none;
        animation: scaleDrop 0.25s linear forwards;
        -webkit-animation: scaleDrop 0.25s linear forwards;
      }
    }
  }
}

#board-friendly .hit {
  animation-name: shot-usa;
  -webkit-animation-name: shot-usa;
}

.disabled {
  pointer-events: none;
}

@media screen and (max-width: 30rem) {
  .board {
    .field-container {
      border-width: 0.0625rem 0 0 0.0625rem;
      .field {
        border-width: 0 0.0625rem 0.0625rem 0;
      }
    }
  }
}

